// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PodIndicator it renders the pod indicator with the correct name with a formatted name 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-indicator"
    data-testid="pod-indicator"
  >
    <button
      class="PodBrowser-indicatorPrompt"
      data-testid="pod-indicator-prompt"
      id="pod-indicator-prompt"
      title="Alice"
      type="button"
    >
      <span
        class="PodBrowser-indicatorLabel"
      >
        Pod
        <i
          class="PodBrowser-icon-caret-down PodBrowser-indicatorChevron"
        />
      </span>
      <span
        class="PodBrowser-indicatorName"
      >
        Alice
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`PodIndicator it renders the pod indicator with the correct name with a name 1`] = `
<DocumentFragment>
  <div
    class="PodBrowser-indicator"
    data-testid="pod-indicator"
  >
    <button
      class="PodBrowser-indicatorPrompt"
      data-testid="pod-indicator-prompt"
      id="pod-indicator-prompt"
      title="Bob"
      type="button"
    >
      <span
        class="PodBrowser-indicatorLabel"
      >
        Pod
        <i
          class="PodBrowser-icon-caret-down PodBrowser-indicatorChevron"
        />
      </span>
      <span
        class="PodBrowser-indicatorName"
      >
        Bob
      </span>
    </button>
  </div>
</DocumentFragment>
`;

exports[`PodIndicator it returns null if there is no profile 1`] = `[Function]`;
